force-app/main/default/objects/Case/fields/Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Tenancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tenancy record associated with this complaint or maintenance request. Used to identify the reporting tenant.</description>
    <label>Tenancy</label>
    <referenceTo>Tenancy__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>