force-app/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <businessProcess>Complaint</businessProcess>
    <description>Used when a tenant lodges a formal complaint — e.g., noise issues, neighbour disputes, landlord conduct, or breach of tenancy conditions.</description>
    <label>Complaint</label>
</RecordType>