force-app/main/default/objects/Case/recordTypes/Maintenance_Request.recordType-meta.xml
<RecordType>
    <active>true</active>
    <businessProcess>Complaint</businessProcess>
    <description>Used when a tenant reports a maintenance problem or repair need — e.g., broken appliance, plumbing issue, electrical fault, or structural concern.</description>
    <fullName>Maintenance_Request</fullName>
    <label>Maintenance Request</label>
</RecordType>